--- a/src/client/accent.html
+++ b/src/client/accent.html
@@ -6,11 +6,9 @@
 </head>
 <body>
 
-<h1>Project Name</h1>
+<h1 align="center">What Is Your Accent?</h1>
 
-<button id="start">Start</button>
-
-<div id="content"></div>
+<button id="start" onclick="startDecisions()"><a href="questions.html">Start</a></button>
 
 </body>
 </html>
