Added css, Fixed AccentServer

--- a/src/client/accent.html
+++ b/src/client/accent.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="accent.css">
 </head>
 <body>
 
-<h1 align="center">What Is Your Accent?</h1>
+<h1>What Is Your Accent?</h1>
 
 <button id="start" onclick="startDecisions()"><a href="questions.html">Start</a></button>
 
