--- a/src/client/questions.html
+++ b/src/client/questions.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="accent.css">
 </head>
 <body>
 
-<h1 align="center">What Is Your Accent?</h1>
+<h1>What Is Your Accent?</h1>
 
 <div id="displayQuestion"></div>
 
-<div class="answerButtons">
-    <button id="yes">Yes</button>
-    <button id="no">No</button>
-</div>
-
-<button id="restart"><a href="accent.html">Restart?</a></button>
+<table class="answerButtons">
+    <tr>
+        <th><button id="yes" class="yes">Yes</button></th>
+        <th><button id="no" class="no">No</button></th>
+    </tr>
+    <tr>
+        <th><button id="restart"><a href="accent.html">Restart?</a></button></th>
+    </tr>
+</table>
 
 </body>
 </html>
