Fixed some stuff

--- a/src/client/accent.html
+++ b/src/client/accent.html
@@ -11,5 +11,7 @@
 
 <button id="start" onclick="startDecisions()"><a href="questions.html">Start</a></button>
 
+<script src="accent.js"></script>
+
 </body>
 </html>
