--- a/src/client/questions.html
+++ b/src/client/questions.html
@@ -17,9 +17,11 @@
         <th><button id="no" class="no">No</button></th>
     </tr>
     <tr>
-        <th><button id="restart"><a href="accent.html">Restart?</a></button></th>
+        <th><button id="restart" class="restart"><a href="accent.html">Restart?</a></button></th>
     </tr>
 </table>
+
+<script src="accent.js"></script>
 
 </body>
 </html>
