Can't find client >:(

--- a/src/client/questions.html
+++ b/src/client/questions.html
@@ -14,11 +14,11 @@
 
 <table class="answerButtons">
     <tr>
-        <th><button id="yes" class="yes">Yes</button></th>
-        <th><button id="no" class="no">No</button></th>
+        <th><button id="yes" class="yes" onclick="answeredYes()">Yes</button></th>
+        <th><button id="no" class="no" onclick="answeredNo()">No</button></th>
     </tr>
     <tr>
-        <th><button id="restart" class="restart"><a href="accent.html">Restart?</a></button></th>
+        <th><button id="restart" class="restart" onclick="restart()">Restart?</button></th>
     </tr>
 </table>
 
