--- a/src/client/accent.html
+++ b/src/client/accent.html
@@ -10,7 +10,7 @@
 
 <h1>What Is Your Accent?</h1>
 
-<button id="start" onclick="startDecisions()"><a href="questions.html">Start</a></button>
+<button id="start" onclick="startDecisions()">Start</button>
 
 <script src="accent.js"></script>
 
