--- a/src/client/accent.html
+++ b/src/client/accent.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="accent.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+    <script src="socket.io-2.2.0.js"></script>
 </head>
 <body>
 
 <h1>What Is Your Accent?</h1>
 
-<button id="start" onclick="startDecisions()">Start</button>
+<button id="start" class="button" onclick="startDecisions()">Start</button>
 
 <script src="accent.js"></script>
 
